[gd_scene load_steps=6 format=3 uid="uid://5lavr16ip2uq"]

[ext_resource type="Script" path="res://src/enemies/slimy.gd" id="1_ywbb1"]
[ext_resource type="Shader" path="res://src/misc/palette_swap.gdshader" id="2_nc482"]
[ext_resource type="Texture2D" uid="uid://cjpahw4hw7oq1" path="res://assets/palettes/enemy_pal.png" id="3_msfmp"]
[ext_resource type="Texture2D" uid="uid://csfbg5vkpnc6k" path="res://assets/enemies/slimy.png" id="4_5yisf"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jl2ni"]
shader = ExtResource("2_nc482")
shader_parameter/palette = ExtResource("3_msfmp")

[node name="Slimy" type="StaticBody2D"]
collision_layer = 4
script = ExtResource("1_ywbb1")
damage = 50

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_jl2ni")
position = Vector2(0, 4)
texture = ExtResource("4_5yisf")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HitBox"]
position = Vector2(1, 0)
polygon = PackedVector2Array(-6, 1, -6, 8, 4, 8, 4, 1)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(1, 0)
polygon = PackedVector2Array(-6, 1, -6, 8, 4, 8, 4, 1)

[node name="FloorRayCast" type="RayCast2D" parent="."]
position = Vector2(4, 7)
target_position = Vector2(0, 2)

[node name="WallRayCast" type="RayCast2D" parent="."]
position = Vector2(4, 4)
target_position = Vector2(2, 0)
